<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Marvel Comics</string>
    <string name="loginWelcome">Welcome to the Marvel HQs</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginRemember">Remember</string>
    <string name="loginLogin">Login</string>
    <string name="loginCreate">Create Account</string>
    <string name="registerRegister">Register</string>
    <string name="registerName">Name</string>
    <string name="registerSave">Save</string>
    <string name="hqNumber">#number</string>
    <string name="descriptionTitle">Title HQ</string>
    <string name="descriptionDescription">No description available</string>
    <string name="descriptionPublised">Published:</string>
    <string name="descriptionData">No date available</string>
    <string name="descriptionPrice">Price: U$</string>
    <string name="descriptionValor">No price available</string>
    <string name="descriptionPage">Pages:</string>
    <string name="descriptionInt">No page available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>